--- a/src/components/_clients.html
+++ b/src/components/_clients.html
@@ -1,5 +1,48 @@
 <div class="clients ">
-    <ul class="clients-list">
+    <ul class="clients-list marquee">
+        <li>
+            <img src="./assets/images/partners/alfabank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/amway.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/ashan.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/huawei.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/lamoda.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/otp-bank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/psbank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/regus.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/regus.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/stada.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/tbank.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/trend.svg" alt="partner">
+        </li>
+        <li>
+            <img src="./assets/images/partners/vtb.svg" alt="partner">
+        </li>
+    </ul>
+</div>
+<div class="clients _rev">
+    <ul class="clients-list marquee">
         <li>
             <img src="./assets/images/partners/alfabank.svg" alt="partner">
         </li>
