--- a/src/components/_heading.html
+++ b/src/components/_heading.html
@@ -12,7 +12,7 @@
                 </h1>
             </div>
             <div class="heading__c-bottom">
-                <p class="txt20">Индивидуальный подход
+                <p class="txt20">Индивидуальный подход <br />
                     и профессионализм позволяют компании ТСМ
                     достигать безупречных результатов
                     в проектах любой сложности
