--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -16,6 +16,12 @@
   }
 }
 
+@mixin mobile {
+  @media (max-width: 48em) {
+    @content;
+  }
+}
+
 @mixin same-size($w, $h) {
   width: $w;
   height: $h;
