--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
     transition: background-color .5s;
-    position: fixed;
+    position: absolute;
     z-index: 100;
     width: 100%;
 
