--- a/src/scss/components/_card-project.scss
+++ b/src/scss/components/_card-project.scss
@@ -14,12 +14,14 @@
         display: flex;
         width: 100%;
         justify-content: space-between;
+        align-items: center;
         @include small-tablet{
-         font-size: 2.4rem;   
+         font-size: 3.2rem;   
         }
         & img, & svg{
             transform: rotate(-90deg);
            @include same-size(2.6rem, 2.6rem);
+       
         }
        
     }
