--- a/src/scss/components/_clients.scss
+++ b/src/scss/components/_clients.scss
@@ -5,18 +5,10 @@
   width: 100%;
 
   &-list {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-
-    @include small-tablet {
-      grid-template-columns: repeat(7, 27rem);
-      animation: bladerunner 10s infinite linear alternate;
-
-
-    }
+    display: flex;
 
     & li {
+      flex-shrink: 0;
       display: flex;
       width: 27rem;
       height: 10rem;
@@ -28,9 +20,9 @@
       }
 
       & img {
-       max-height: 100%;
-       max-width: 100%;
-      
+        max-height: 100%;
+        max-width: 100%;
+
       }
     }
   }
