--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,7 +1,8 @@
 .footer {
     padding: 20rem 0 0;
     position: relative;
-    @include small-tablet{
+
+    @include small-tablet {
         padding: 18rem 0 0;
     }
 
@@ -9,7 +10,7 @@
     &__c {
         display: grid;
         grid-template-columns: auto auto auto;
-        grid-template-rows: 1fr;
+        grid-template-rows: 9rem;
         justify-content: space-between;
         padding: 3rem 0;
         gap: 7rem 0;
@@ -30,14 +31,15 @@
             align-items: center;
             border: .2rem solid $gray;
             transition: border-color .5s;
-            @include small-tablet{
+
+            @include small-tablet {
                 border: none;
                 width: 30rem;
             }
 
             & svg {
-                width: 90%;
-            max-height: 100%;
+                width: 80%;
+                max-height: 100%;
                 transition: fill .5s;
 
                 & g>path:nth-child(2) {
@@ -61,10 +63,12 @@
 
         &-nav {
             display: flex;
-            height: 100%;
+
         }
 
+
         &-desk-right {
+            height: 100%;
             display: flex;
             gap: 2.4rem;
 
@@ -76,13 +80,14 @@
                 stroke: $black;
             }
         }
-        & .mobile{
-            @include small-tablet{
+
+        & .mobile {
+            @include small-tablet {
                 display: flex;
                 flex-direction: column;
                 gap: 3rem;
             }
-           
+
         }
 
         & .btn-tr {
