--- a/src/scss/components/_our-projects.scss
+++ b/src/scss/components/_our-projects.scss
@@ -12,7 +12,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: flex-end;
-               
+
             }
 
             & .our-projects-item {
@@ -33,18 +33,21 @@
 
                 &-img {
                     display: flex;
-                    width:36rem;
+                    width: 36rem;
                     height: 45rem;
-                    transition: width .5s, height .5s;
                     min-width: 21.5vw;
+                    transition:width .3s linear, height .3s linear, margin .3s linear;
+                    overflow: hidden;
+
                     @include small-tablet {
                         width: 100%;
-                      
+
                         height: 84rem;
                     }
 
                     & img {
                         object-fit: cover;
+                        object-position: center;
                     }
                 }
 
@@ -73,13 +76,22 @@
                 }
 
                 &_prev {
-                    
+
                     @include desktop {
                         margin-right: 2rem;
+
                         & .our-projects-item-img {
                             height: 51rem;
-                         transform: translateX(6rem);  
-                         
+                            transform: translateX(6rem);
+
+                        }
+                    }
+
+                    @include mobile {
+                        & .our-projects-item-img {
+                            margin-top: 10rem;
+                            height: 74rem;
+
                         }
                     }
                 }
@@ -87,22 +99,33 @@
                 &_next {
                     @include desktop {
                         margin-left: 2rem;
+
                         & .our-projects-item-img {
                             height: 51rem;
-                            transform: translateX(-6rem);  
-                           
+                            transform: translateX(-6rem);
+
+                        }
+                    }
+
+                    @include mobile {
+                        & .our-projects-item-img {
+                            margin-top: 10rem;
+                            height: 74rem;
+
                         }
                     }
 
                 }
 
-               
+
 
                 &_active {
                     & a {
                         width: 100%;
                         height: 100%;
                     }
+
+
                     @include desktop {
                         opacity: 1;
 
@@ -111,12 +134,12 @@
                             opacity: 1;
                         }
 
-                        
+
 
                         & .our-projects-item-img {
-                           width: 62rem;
-                           min-width: 30vw;
-                           height: 62rem;
+                            width: 62rem;
+                            min-width: 30vw;
+                            height: 62rem;
                         }
                     }
 
