--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -31,12 +31,30 @@
                 & li {
                     display: flex;
                     flex-direction: column;
+                    @include small-tablet{
+                        text-align: center;
+                    }
 
                     & .txt18 {
                         text-transform: lowercase;
+                        display: flex;
+
+                        @include desktop {
+                            & span {
+                                width: 2rem;
+                            }
+                        }
 
                         @include small-tablet {
                             font-size: 3rem;
+                            & span {
+                                width: 1rem;
+                            }
+                        }
+                    }
+                    & .tl2{
+                        @include small-tablet{
+                            font-size: 5.6rem;
                         }
                     }
                 }
@@ -46,42 +64,57 @@
 }
 
 .about-adv {
+    & .section-heading{
+       gap: 0 40rem;
+       margin-bottom: 7.8rem;
+       @include mobile{
+        gap: 4rem;
+        margin-bottom: 5rem;
+       }
+    }
     &__c {
-    
 
-        &-list{
+
+        &-list {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             grid-template-rows: 35.6rem;
             gap: 3.2rem;
-            @include small-tablet{
+
+            @include small-tablet {
                 grid-template-columns: 100%;
-                grid-template-rows: repeat(4,71.2rem);
+                grid-template-rows: repeat(4, 71.2rem);
             }
-            &-e{
+
+            &-e {
                 position: relative;
                 width: 100%;
                 height: 100%;
                 display: flex;
-                &-img{
+
+                &-img {
                     position: absolute;
                     z-index: -1;
                     width: 100%;
                     height: 100%;
                     display: flex;
-                    & img{
+
+                    & img {
                         object-fit: cover;
                         object-position: center;
                     }
-                   
+
                 }
-                &-body{
+
+                &-body {
                     flex-grow: 1;
                     display: flex;
                     flex-direction: column;
                     background-color: rgba(0, 0, 0, 0.1);
+                    backdrop-filter: blur(2px);
                     padding: 2.1rem;
-                    & p{
+
+                    & p {
                         margin-top: auto;
                     }
 
@@ -91,26 +124,38 @@
     }
 }
 
-.about-clients{
+.about-clients {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 7rem;
-   
-  
+
+
 }
-.about-ready{
-    &__c{
+
+.about-ready {
+    &__c {
         display: grid;
         grid-template-columns: 1fr .3fr;
-        align-items: flex-end;  
+        align-items: flex-end;
         gap: 4rem;
-        @include small-tablet{
+        @include desktop{
+            margin-top: 40rem;
+        }
+
+        @include small-tablet {
             grid-template-columns: 100%;
+            & .tl1{
+                font-size: 4rem;
+            }
+            & .txt20{
+                font-size: 3.2rem;
+            }
         }
     }
 }
-.about-command__c{
-    gap:9rem 36rem  ;
+
+.about-command__c {
+    gap: 9rem 36rem;
 }
