--- a/src/scss/ui/buttons.scss
+++ b/src/scss/ui/buttons.scss
@@ -37,7 +37,7 @@
     width: fit-content;
     display: flex;
     align-items: center;
-    padding: 4rem;
+    padding: 3.3rem 4rem;
     gap: 2.4rem;
     box-sizing: border-box;
     border: .2rem solid transparent;
