--- a/src/scss/dev/zatz.scss
+++ b/src/scss/dev/zatz.scss
@@ -30,4 +30,5 @@
 @import '../components/projects-detail';
 @import '../components/recomendation';
 @import '../components/services';
+@import '../components/contacts';
 /* by page */
