--- a/src/scss/ui/inputs.scss
+++ b/src/scss/ui/inputs.scss
@@ -31,7 +31,7 @@
         & input {
             width: 100%;
             padding: 2.4rem;
-            border: .2rem solid $gray-main;
+            border: 1px solid $gray-main;
 
             &::placeholder {
                 color: $gray-main;
