--- a/src/components/_heading.html
+++ b/src/components/_heading.html
@@ -1,6 +1,16 @@
 <section class="heading section-bg">
     <div class="section-bg-img">
-        <img src="./assets/images/heading.webp" alt="heading">
+        
+        <div class="section-bg-img-video">
+            <img src="./assets/images/heading.webp" alt="">
+            <video class="section-bg-video" autoplay="true" preload="auto" controls="false" disablepictureinpicture
+                pip="false" muted loop>
+                <source src="./assets/video/video.mp4" type="video/mp4" />
+            </video>
+           
+        </div>
+
+
     </div>
     <div class="container section-bg__c">
         <div class=" heading__c">
