--- a/src/components/_card-news.html
+++ b/src/components/_card-news.html
@@ -6,7 +6,7 @@
     <div class="card-news__info">
         <h3 class="tl3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam accusantium, consectetur
             aspernatur magnam cupiditate alias culpa quam veritatis nesciunt cum!</h3>
-        <div class="card-news__info-body">
+        <a href="#" class="card-news__info-body">
             <p class="txt18 card-news__info-body-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptatum, sapiente, modi sint sit
                 odio
@@ -20,7 +20,7 @@
                 labore.
                 Id a sequi harum quo culpa quod officia! Debitis aliquid rerum tenetur quasi inventore?
             </p>
-        </div>
+        </a>
 
     </div>
     <a href="#" class="card-news__link txt16 txt-up flex-row">
