--- a/src/scss/components/_heading.scss
+++ b/src/scss/components/_heading.scss
@@ -13,6 +13,15 @@
 
             max-width: 90rem;
             text-transform: uppercase;
+
+            &-main {
+                @include mobile {
+                    & .tl1{
+                        font-size: 8.4rem;
+                    }
+                   
+                }
+            }
         }
 
         &-bottom {
