--- a/src/scss/libs/_set.scss
+++ b/src/scss/libs/_set.scss
@@ -133,4 +133,11 @@ input[type='number'] {
     width: 100%;
   }
 }
+video::-webkit-media-controls {
+  display: none !important;
+}
+video::-webkit-media-controls-enclosure {
+  display: none !important;
+}
+
 @import "@fancyapps/ui/dist/fancybox/fancybox.css";
