--- a/src/scss/ui/section.scss
+++ b/src/scss/ui/section.scss
@@ -92,7 +92,7 @@
 .section-bg {
     width: 100%;
     position: relative;
-    height: 100vh;
+    height: 100dvh;
     min-height: 100rem;
     max-height: 200rem;
     box-shadow: 0px -23rem 9.5rem -11.2rem $bg inset;
