--- a/src/scss/components/career.scss
+++ b/src/scss/components/career.scss
@@ -71,6 +71,10 @@
                     &-link {
                         margin-top: auto;
                         font-weight: 500;
+                        margin-left: auto;
+                        @include mobile{
+                            margin-left: 0;
+                        }
 
                         & img {
                             top: -0.5rem !important;
