--- a/src/scss/components/_our-projects.scss
+++ b/src/scss/components/_our-projects.scss
@@ -62,6 +62,8 @@
 
                     @include desktop {
                         opacity: 0;
+                        margin-top: 0;
+                        height: 12rem;
                     }
 
 
