--- a/src/scss/components/_last-news.scss
+++ b/src/scss/components/_last-news.scss
@@ -1,45 +1,54 @@
 .last-news {
     &-item {
         position: relative;
-        & a{
+
+        & a {
             position: absolute;
             z-index: 5;
             width: 100%;
             height: 100%;
         }
+
         &-img {
             overflow: hidden;
             display: flex;
             height: 40rem;
-            @include mobile{
+
+            @include mobile {
                 height: 60rem;
             }
+
             & img {
                 max-width: 100%;
                 object-fit: cover;
                 object-position: center;
             }
         }
-        &-name{
+
+        &-name {
             @include wrap-text(2);
             margin: 3rem 2.4rem;
             font-family: EuropeExt;
-            @include small-tablet{
-                font-size: 3.4rem;
+            height: 7rem;
 
+            @include small-tablet {
+                font-size: 3.4rem;
+                height: 10rem;
             }
 
         }
-        &-footer{
+
+        &-footer {
             border-top: .1rem solid $gray;
             padding-top: 2.3rem;
             margin: 0 2.4rem 3rem;
             display: flex;
             justify-content: space-between;
-            & svg{
+
+            & svg {
                 stroke: $green;
             }
         }
-       
+
     }
 }
